# esp-bmc

./: .gitignore  Projektbeschreibung.txt  README.md  amazon link.url  inital setup.txt  was loggen.txt  webconfig.txt
docs/: ZABBIX.md  admin-guide.html  board-recherche.md  bom.md  entscheidungen.md  esp-bmc-onepager.html  esp-bmc.mib  implementierungsplan.html  lastenheft.txt  pflichtenheft.txt  projektstand.md  stromversorgung.md  systemlast.md  verdrahtungsplan.html  zabbix-template-esp-bmc.yaml
firmware/: CMakeLists.txt  diagram.json  partitions.csv  platformio.ini  scenario-power-press.yaml  scenario-tastschutz.yaml  sdkconfig.defaults  sdkconfig.defaults.esp32-s3-devkitc-1-n8r8  sdkconfig.defaults.wokwi-sim  sdkconfig.esp32-s3-devkitc-1-n16r8  sdkconfig.esp32-s3-devkitc-1-n8r8  sdkconfig.wokwi-sim  wokwi.toml
firmware/components/audit_log/: CMakeLists.txt  audit_log.c
firmware/components/config_manager/: CMakeLists.txt  config_manager.c
firmware/components/gpio_manager/: CMakeLists.txt  gpio_manager.c
firmware/components/gpio_manager/include/: gpio_manager.h
firmware/components/network_manager/: CMakeLists.txt  Kconfig  network_manager.c
firmware/components/notification_manager/: CMakeLists.txt  notification_manager.c
firmware/components/ota_manager/: CMakeLists.txt  ota_manager.c
firmware/components/sensor_history/: CMakeLists.txt  sensor_history.c
firmware/components/sensor_manager/: CMakeLists.txt  Kconfig  sensor_manager.c
firmware/components/snmp_manager/: CMakeLists.txt  snmp_manager.c
firmware/components/ssh_manager/: CMakeLists.txt  idf_component.yml  ssh_manager.c
firmware/components/storage_manager/: CMakeLists.txt  idf_component.yml  storage_manager.c
firmware/components/time_manager/: CMakeLists.txt  time_manager.c
firmware/components/usb_manager/: CMakeLists.txt  idf_component.yml  usb_manager.c
firmware/components/web_server_manager/: CMakeLists.txt  web_server_manager.c
firmware/components/web_server_manager/include/: login_html.h  web_server_manager.h
firmware/components/wireguard_manager/: CMakeLists.txt  Kconfig  wireguard_manager.c
firmware/components/wireguard_manager/include/: wireguard_manager.h
firmware/main/: CMakeLists.txt  main.c
tools/: EspBmcLink.psm1  Setup.ps1  config_template.txt
(+19 files in other folders)
